# Road_Accident_Prediction

./: .env.example  .gitignore  README.md  Road_Accident_Prediction.ipynb  app.py  build.sh  check_data.py  model.pkl  pyproject.toml  render.yaml  requirements.txt  requirements_streamlit.txt  road_catboost.ipynb  run.py  simple_test.py  streamlit_app.py  test.py  test_api.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: NewsArticles.js  PredictionForm.js
