[tool.poetry]
name = "road-accident-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
flask-cors = "4.0.0"
numpy = "1.24.4"
pandas = "2.2.2"
scikit-learn = "1.4.2"
catboost = "1.2.2"
joblib = "1.3.2"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"